<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SplashScreen"
    >
    <LinearLayout
        android:id="@+id/layoutSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:visibility="invisible"
            android:id="@+id/textViewFreeAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_account"
            android:textColor="@color/white"
            android:textSize="@dimen/text_12"
            />

        <TextView
            android:id="@+id/tvBecomeMember"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/become_member_text"
            android:textColor="@color/teal_200"
            android:textSize="@dimen/text_12"
            android:textStyle="bold"
            />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/default_margin"
        android:background="@drawable/divider_dotted"
        android:layerType="software"
        app:layout_constraintBottom_toTopOf="@id/layoutSignUp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTermCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_32"
        android:letterSpacing="0.05"
        android:text="@string/terms_conditions"
        android:textColor="@color/white"
        android:textSize="@dimen/text_10"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/proceed_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_36"
        android:layout_margin="@dimen/default_margin"
        android:gravity="center"
        android:paddingEnd="@dimen/max_padding"
        android:paddingLeft="@dimen/max_padding"
        android:paddingRight="@dimen/max_padding"
        android:paddingStart="@dimen/max_padding"
        android:text="@string/on_boarding_login_button_text"
        app:layout_constraintBottom_toTopOf="@+id/tvTermCondition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/app_buttons_style"
        />
    <TextView
        android:id="@+id/textView5"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/above_login_button_text"
        android:textColor="@color/white"
        android:textSize="@dimen/text_12"
        app:layout_constraintBottom_toTopOf="@+id/proceed_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_pager"
        app:tabBackground="@drawable/viewpager_tab_selector"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"
        />

    <com.sejjoh.ikeeper.AutoScrollViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>